welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:10: error: type mismatch;
 found   : Unit
 required: String
	while (vacation == true ) {
        ^